--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
-    
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
@@ -48,149 +47,179 @@
       </nav>
       <span class="header__rec-indicator" aria-hidden="true"> REC </span>
       <h1 class="header__title">no focus</h1>
-      <p class="header__text-paragraph title-decor">
-          Что делать, когда не можешь делать ничего<br />
-          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </p>      
+      <div class="header__text-paragraph title-decor">
+        <p>Что делать, когда не можешь делать ничего</p>
+        <p>
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </p>
+      </div>
     </header>
     <main class="main">
-      <section class="why horizontal-section">
+      <section class="why content-section">
         <h2 class="why__title section__main-title">
           Почему сосредоточиться так сложно
         </h2>
         <ul class="why__card-list">
           <li class="card-list-item">
-            <article class="why___card-answer answer-horizontal">
-              <h3 class="card_title title-decor">Многозадачность</h3>
-              <p class="card__text">
-                Особенно сложно сосредоточиться, когда задач много и все они —
-                важные. Где же легендарная многозадачность, когда она так нужна
-                вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-                её просто не существует. Исследователи
-                <a
-                  href="https://dana.org/news-and-insights/"
-                  class="card-link"
-                  target="_blank"
-                  >выяснили</a
-                >, что мозгу тяжело концентрироваться даже на двух делах
-                одновременно. А когда в поле внимания попадает несколько важных
-                задач, организм паникует и выделяет кортизол и адреналин —
-                «гормоны стресса». Из-за этого мы работаем невнимательно:
-                ошибаемся и быстро устаём.
-              </p>
-            </article>
+            <h4 class="card_title title-decor">Многозадачность</h4>
+            <p class="card__text">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a
+                href="https://dana.org/news-and-insights/"
+                class="card-link"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
           </li>
           <li class="card-list-item">
-            <article class="why___card-answer answer-horizontal">
-              <h3 class="card_title title-decor">Дофамин</h3>
-              <p class="card__text">
-                С гормонами стресса всё понятно, но дальше — ещё интереснее. В
-                нашей невозможности сосредоточиться замешана и полная
-                противоположность стрессу — дофамин. Это вещество участвует в
-                системе вознаграждения мозга. Причём тут он? Мы часто
-                отвлекаемся от важной задачи на что-то более «приятное» для
-                мозгов. Например, смотрим лайки в соцсетях. В это время и
-                выделяется дофамин — и мы чувствуем удовольствие. Получается
-                замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
-                получаешь.
-              </p>
-            </article>
+            <h4 class="card_title title-decor">Дофамин</h4>
+            <p class="card__text">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
           </li>
         </ul>
       </section>
-      <section class="what vertical-section">
+      <section class="what section">
         <h2 class="what__title section__main-title">
           Что снижает концентрацию внимания?
         </h2>
         <ul class="what__card-list">
           <li class="card-list-item">
-            <article class="what___card-answer answer-vertical">
-              <h3 class="card_title title-decor">Многозадачность</h3>
-              <p class="card__text">
-                Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
-              </p>
-            </article>
+            <h4 class="card_title title-decor">Многозадачность</h4>
+            <p class="card__text">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
           </li>
           <li class="card-list-item">
-            <article class="what___card-answer answer-vertical">
-              <h3 class="card_title title-decor">Еда</h3>
-              <p class="card__text">
-                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
-              </p>
-            </article>
+            <h4 class="card_title title-decor">Еда</h4>
+            <p class="card__text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
           </li>
           <li class="card-list-item">
-            <article class="what___card-answer answer-vertical">
-              <h3 class="card_title title-decor">Гаджеты</h3>
-              <p class="card__text">
-                Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
-              </p>
-            </article>
+            <h4 class="card_title title-decor">Гаджеты</h4>
+            <p class="card__text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
           </li>
         </ul>
       </section>
-      <section class="how horizontal-section">
+      <section class="how content-section">
         <h2 class="how__title section__main-title">
-          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
         </h2>
-        <ul class="how__card-list">
-          <li class="card-list-item">
-            <article class="how answer-horizontal">
-              <h3 class="card_title title-decor">5 простых (на самом деле не очень) советов</h3>
-            </article>
-          </li>
-          <li class="card-list-item">
-            <article class="how answer-horizontal">
-              <h3 class="card_title title-decor normal-font">Представьте небо и облака</h3>
+        <div class="section__wrapper">
+          <h3 class="section__subtitle title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="how__card-list">
+            <li class="card-list-item">
+              <h4 class="card_title title-decor normal-font">
+                Представьте небо и облака
+              </h4>
               <p class="card__text">
-                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
               </p>
-            </article>
-          </li>
-          <li class="card-list-item">
-            <article class="how___card-answer answer-horizontal">
-              <h3 class="card_title title-decor normal-font">Включите музыку</h3>
+            </li>
+            <li class="card-list-item">
+              <h3 class="card_title title-decor normal-font">
+                Включите музыку
+              </h3>
               <p class="card__text">
-                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист c «белым шумом» или нейромузыкой.
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист c «белым шумом» или нейромузыкой.
               </p>
-            </article>
-          </li>
-          <li class="card-list-item">
-            <article class="how answer-horizontal">
+            </li>
+            <li class="card-list-item">
               <h3 class="card_title title-decor normal-font">Прогуляйтесь</h3>
               <p class="card__text">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                показал, что созерцание природы повышает концентрацию, в то
+                время как после просмотра городских пейзажей она наоборот
+                понижается. Можно совместить прогулку с физическими упражнениями
+                или бегом — так в мозг поступит ещё больше кислорода и он будет
+                лучше работать. Но и простая двадцатиминутная прогулка — тоже
+                отличный вариант.
               </p>
-            </article>
-          </li>
-          <li class="card-list-item">
-            <article class="how answer-horizontal">
+            </li>
+            <li class="card-list-item">
               <h3 class="card_title title-decor normal-font">Хорошо ешьте</h3>
               <p class="card__text">
-                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
               </p>
-            </article>
-          </li>
-          <li class="card-list-item">
-            <article class="how answer-horizontal">
+            </li>
+            <li class="card-list-item">
               <h3 class="card_title title-decor normal-font">Читайте</h3>
               <p class="card__text">
-                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
               </p>
-            </article>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="gallery">
         <h2 class="gallery__title card_title title-decor">
           А можно в картинках?
         </h2>
         <div class="gallery-content">
-          <img src="./images/sunset.png" alt="закат">
-          <img src="./images/ice-cream.png" alt="мороженое">
-          <img src="./images/tape.png" alt="аудиокассета">
-          <img src="./images/books.png" alt="стопка книг">
-          <img src="./images/street.png" alt="улица с домиками">
+          <img src="./images/sunset.png" alt="закат" loading="lazy" />
+          <img src="./images/ice-cream.png" alt="мороженое" loading="lazy" />
+          <img src="./images/tape.png" alt="аудиокассета" loading="lazy" />
+          <img src="./images/books.png" alt="стопка книг" loading="lazy" />
+          <img
+            src="./images/street.png"
+            alt="улица с домиками"
+            loading="lazy"
+          />
         </div>
       </section>
     </main>
