apply reviewer feedback

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h2 class="why__title section__main-title">
           Почему сосредоточиться так сложно
         </h2>
-        <ul class="why__card-list">
+        <ul class="section__wrapper">
           <li class="card-list-item">
-            <h4 class="card_title title-decor">Многозадачность</h4>
+            <h3 class="card_title title-decor">Многозадачность</h3>
             <p class="card__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -81,7 +81,7 @@
             </p>
           </li>
           <li class="card-list-item">
-            <h4 class="card_title title-decor">Дофамин</h4>
+            <h3 class="card_title title-decor">Дофамин</h3>
             <p class="card__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -101,7 +101,7 @@
         </h2>
         <ul class="what__card-list">
           <li class="card-list-item">
-            <h4 class="card_title title-decor">Многозадачность</h4>
+            <h3 class="card_title title-decor">Многозадачность</h3>
             <p class="card__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -112,7 +112,7 @@
             </p>
           </li>
           <li class="card-list-item">
-            <h4 class="card_title title-decor">Еда</h4>
+            <h3 class="card_title title-decor">Еда</h3>
             <p class="card__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -123,7 +123,7 @@
             </p>
           </li>
           <li class="card-list-item">
-            <h4 class="card_title title-decor">Гаджеты</h4>
+            <h3 class="card_title title-decor">Гаджеты</h3>
             <p class="card__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -145,7 +145,7 @@
           <h3 class="section__subtitle title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <ul class="how__card-list">
+          <ul class="section__wrapper">
             <li class="card-list-item">
               <h4 class="card_title title-decor normal-font">
                 Представьте небо и облака
